--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,14 @@
 <br>
 <p>{{price1}}</p>
 <br>
+<img src="{{ image_url1 }}" alt="Generated Image" />
+<br>
 <br>
 <a href="/2">{{contestant2}}</a>
 <br>
 <p>{{price2}}</p>
+<br>
+<img src="{{ image_url2 }}" alt="Generated Image" />
 <br>
 <br>
 <a href="admin">admin</a>
