--- a/templates/login.html
+++ b/templates/login.html
@@ -29,5 +29,7 @@
         
     <input type="submit"  value="Login">
 </form>
+    <br>
+        <a href = '/register'>Register here</a>
 </body>
 </html>
