--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <h1>Better value for money? Click to Choose.</h1>
     <h2>Try and guess the item that most people have picked!</h2>
     <a href = "/leaderboard">Leaderboard</a>
+    <a href = "/admin">Admin</a>
 </div>
 
 <div class="image123">
