--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <div class="textContainer1">
     <h1>Better value for money? Click to Choose.</h1>
     <h2>Try and guess the item that most people have picked!</h2>
+    <p>Product List is reset daily at 8pm GMT</p>
     <a href = "/leaderboard">Leaderboard</a>
     <a href = "/admin">Admin</a>
 </div>
