--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,14 @@
     <h1>Better value for money? Click to Choose.</h1>
     <h2>Try and guess the item that most people have picked!</h2>
     <p>Product List is reset daily at 8pm GMT</p>
+    <p>
+        Current prize is £2.00. Every day at 8pm GMT
+        the Top 10 users on the leaderboard will receive an email and be paid in bitcoin.
+        (You must enter a valid bitcoin wallet address to be paid.)
+        Places 1-2 receive 100% of prize. Places 3-5 receive 50% of prize. Places 5-10 receive 20% of prize.
+        It's recommended to cash out your bitcoin after you have amassed a lot of money because
+        the bitcoin transaction fees are always super high. It may take up to 24 hours to receive your bitcoin.
+    </p>
     <a href = "/leaderboard">Leaderboard</a>
     <a href = "/admin">Admin</a>
 </div>
