--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,3 +1,13 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6DN3YFD90W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6DN3YFD90W');
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
