--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,14 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LLMZH86LY6">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LLMZH86LY6');
+</script>
+
 <html lang="en">
     <head>
         <meta charset="UTF-8">
