--- a/templates/register.html
+++ b/templates/register.html
@@ -289,7 +289,7 @@
           </ul>
         {% endif %}
         <br>
-        <label for="wallet_address">Monero Wallet Address:</label>
+        <label for="wallet_address">Monero Wallet Address: (Can leave blank)</label>
         {{ form.wallet_address }}
         {% if form.wallet_address.errors %}
           <ul class="errors">
