--- a/templates/register.html
+++ b/templates/register.html
@@ -331,6 +331,13 @@
         {% endif %}
         <br>
         <input type="submit" value="Register">
+        <p>
+        Current prize is £1.00. Every day at 8pm GMT
+        the Top 10 users on the leaderboard will receive an email and be paid in Monero (XMR).
+        (You must enter a valid Monero wallet address to be paid, or if I know you in person I can pay cash.)
+        Places 1-2 receive 100% of prize. Places 3-5 receive 50% of prize. Places 5-10 receive 20% of prize.
+        It may take up to 24 hours to receive your Monero.
+    </p>
     </form>
 </body>
 </html>
