--- a/templates/login.html
+++ b/templates/login.html
@@ -42,5 +42,12 @@
 </form>
     <br>
         <a href = '/register'>Register here</a>
+    <p>
+        Current prize is £1.00. Every day at 8pm GMT
+        the Top 10 users on the leaderboard will receive an email and be paid in Monero (XMR).
+        (You must enter a valid Monero wallet address to be paid, or if I know you in person I can pay cash.)
+        Places 1-2 receive 100% of prize. Places 3-5 receive 50% of prize. Places 5-10 receive 20% of prize.
+        It may take up to 24 hours to receive your Monero.
+    </p>
 </body>
 </html>
