--- a/templates/register.html
+++ b/templates/register.html
@@ -332,6 +332,9 @@
         <br>
         <input type="submit" value="Register">
         <p>
+        The goal of the game is to pick the product that most people think is better value for money.
+        </p>
+        <p>
         Current prize is £1.00. Every day at 8pm GMT
         the Top 10 users on the leaderboard will receive an email and be paid in Monero (XMR).
         (You must enter a valid Monero wallet address to be paid, or if I know you in person I can pay cash.)
