--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,10 @@
 
   gtag('config', 'G-LLMZH86LY6');
 </script>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
+<a href="https://shop.voteforproduct.com/">
+    <p class="topright">Shop</p>
+</a>
 
 <html lang="en">
     <head>
