--- a/templates/1.html
+++ b/templates/1.html
@@ -12,6 +12,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/1.css') }}">
+<a href="https://shop.voteforproduct.com/">
+    <p class="topright">Shop</p>
+</a>
 <head>
     <div class="textContainer1">
         {% with messages = get_flashed_messages(with_categories=True) %}
