--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,9 @@
 
   gtag('config', 'G-LLMZH86LY6');
 </script>
-
+<a href="https://shop.voteforproduct.com/">
+    <p class="topright">Shop</p>
+</a>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
 
