--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,9 @@
+.topright{
+    position: absolute;
+    top: 0px;
+    right: 20px;
+    font-size: 20px;
+}
 .textContainer1{
     text-align:center;
     font-size: 20px;
