--- a/templates/index.html
+++ b/templates/index.html
@@ -13,22 +13,8 @@
 </a>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
-
-<div class="textContainer1">
-    <h1>Better value for money? Click to Choose.</h1>
-    <h2>Try and guess the item that most people have picked!</h2>
-    <p>Product List is reset daily at 8pm GMT</p>
-    <p>
-        Current prize is £1.00. Every day at 8pm GMT
-        the Top 10 users on the leaderboard will receive an email and be paid in Monero (XMR).
-        (You must enter a valid Monero wallet address to be paid, or if I know you in person I can pay cash.)
-        Places 1-2 receive 100% of prize. Places 3-5 receive 50% of prize. Places 5-10 receive 20% of prize.
-        It may take up to 24 hours to receive your Monero.
-    </p>
-    <a href = "/leaderboard">Leaderboard</a>
-    <a href = "/admin">Admin</a>
-</div>
-
+<br>
+<br>
 <div class="image123">
     <div class="imgContainer1">
         <a href = "/1">{{contestant1}}</a>
@@ -44,6 +30,27 @@
             <img src="{{ image_url2 }}" height="200" width="200"/>
         </a>
     </div>
+    <div class="imgContainer3">
+<!--        This creates a blank character so the images display left and right properly-->
+        <p>
+            &nbsp;
+            &#160;
+        </p>
     </div>
 </div>
+<div class="textContainer1">
+    <h1>Better value for money? Click to Choose.</h1>
+    <h2>Try and guess the item that most people have picked!</h2>
+    <p>Product List is reset daily at 8pm GMT</p>
+    <p>
+        Current prize is £1.00. Every day at 8pm GMT
+        the Top 10 users on the leaderboard will receive an email and be paid in Monero (XMR).
+        (You must enter a valid Monero wallet address to be paid, or if I know you in person I can pay cash.)
+        Places 1-2 receive 100% of prize. Places 3-5 receive 50% of prize. Places 5-10 receive 20% of prize.
+        It may take up to 24 hours to receive your Monero.
+    </p>
+    <a href = "/leaderboard">Leaderboard</a>
+    <a href = "/admin">Admin</a>
+</div>
+
 
