--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,10 +4,6 @@
     right: 20px;
     font-size: 20px;
 }
-.textContainer1{
-    text-align:center;
-    font-size: 20px;
-}
 .imgContainer1{
     float:left;
     width: 250px;
@@ -19,4 +15,15 @@
     width: 250px;
     word-wrap: break-word;
     font-size: 18px;
+}
+.imgContainer3{
+    float:center;
+    width: 250px;
+    word-wrap: break-word;
+    font-size: 20px;
+}
+.textContainer1{
+    display: block;
+    text-align:center;
+    font-size: 20px;
 }
