--- a/templates/1.html
+++ b/templates/1.html
@@ -15,6 +15,9 @@
 <a href="https://shop.voteforproduct.com/">
     <p class="topright">Shop</p>
 </a>
+<a href="mailto:support@voteforproduct.com?subject=voteforproduct.com%20support">
+    <p class="topleft">Contact support</p>
+</a>
 <head>
     <div class="textContainer1">
         {% with messages = get_flashed_messages(with_categories=True) %}
