--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -12,6 +12,9 @@
 <a href="https://shop.voteforproduct.com/">
     <p class="topright">Shop</p>
 </a>
+<a href="mailto:support@voteforproduct.com?subject=voteforproduct.com%20support">
+    <p class="topleft">Contact support</p>
+</a>
 
 <!DOCTYPE html>
 <html lang="en">
