--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,10 @@
 <a href="https://shop.voteforproduct.com/">
     <p class="topright">Shop</p>
 </a>
+<br>
+<a href="mailto:support@voteforproduct.com?subject=voteforproduct.com%20support">
+    <p class="topleft">Contact support</p>
+</a>
 
 <html lang="en">
     <head>
