--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,10 @@
 <a href="https://shop.voteforproduct.com/">
     <p class="topright">Shop</p>
 </a>
+<br>
+<a href="mailto:support@voteforproduct.com?subject=voteforproduct.com%20support">
+    <p class="topleft">Contact support</p>
+</a>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
 <br>
