--- a/static/css/2.css
+++ b/static/css/2.css
@@ -4,6 +4,12 @@
     right: 20px;
     font-size: 20px;
 }
+.topleft{
+position: absolute;
+    top: 25px;
+    right: 20px;
+    font-size: 20px;
+}
 .textContainer1{
     font-size: 50px;
     margin: 0;
