--- a/static/css/1.css
+++ b/static/css/1.css
@@ -4,10 +4,16 @@
     right: 20px;
     font-size: 20px;
 }
+.topleft{
+position: absolute;
+    top: 25px;
+    right: 20px;
+    font-size: 20px;
+}
 .textContainer1{
-    font-size: 50px;
+    font-size: 30px;
     margin: 0;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
