--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,6 +4,12 @@
     right: 20px;
     font-size: 20px;
 }
+.topleft{
+position: absolute;
+    top: 25px;
+    right: 20px;
+    font-size: 20px;
+}
 .imgContainer1{
     float:left;
     width: 250px;
