--- a/templates/1.html
+++ b/templates/1.html
@@ -11,7 +11,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/1.css') }}">
+<link rel="stylesheet" type="text/css" href="static/css/1.css">
 <a href="https://shop.voteforproduct.com/">
     <p class="topright">Shop</p>
 </a>
