--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <p class="topleft">Contact support</p>
 </a>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
+<link rel="stylesheet" type="text/css" href="static/css/index.css">
 <br>
 <br>
 <div class="image123">
