--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
 
   gtag('config', 'G-LLMZH86LY6');
 </script>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
+<link rel="stylesheet" type="text/css" href="static/css/index.css">
 <a href="https://shop.voteforproduct.com/">
     <p class="topright">Shop</p>
 </a>
