--- a/static/css/index.css
+++ b/static/css/index.css
@@ -33,3 +33,51 @@ position: absolute;
     text-align:center;
     font-size: 20px;
 }
+
+.card-container {
+    display: flex;
+    
+    justify-content: center;
+}
+
+.card {
+    flex: 0 0 calc(50% - 20px);
+    border:1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1) ;
+    margin: 10px;
+    overflow: hidden;
+
+}
+.card-body {
+    padding: 15px;
+    text-align: center;
+}
+
+.card a {
+    text-decoration: none;
+    color: #333;
+
+}
+
+.card p {
+    margin: 0;
+
+}
+
+.card img {
+    
+    width: 50%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+
+@media screen and (max-width: 768px){
+    .card-container {
+        flex-wrap: wra;
+    }
+    
+}
