--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -2,10 +2,22 @@
 <html>
 <head>
     <title>Leaderboard</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/nav.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/leaderboard.css') }}">
 </head>
 <body>
-
+    <nav class="navbar">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a href="/">Shop</a></li>
+            <li class="nav-item"><a href="/leaderboard">Leaderboard</a></li>
+            <li class="nav-item"><a href="/contact">Contact Us</a></li>
+            <li class="nav-item"><a href="/login">Login</a></li>
+            
+    
+        </ul>
+    
+    
+    </nav>
 <h1>Leaderboard</h1>
 
 <div class="table-container">
@@ -32,6 +44,8 @@
         </tbody>
     </table>
 </div>
-
+<footer class="footer">
+    <p>&copy; 2024 Vote For Product</p>
+</footer>
 </body>
 </html>
