--- a/templates/login.html
+++ b/templates/login.html
@@ -8,24 +8,29 @@
 
   gtag('config', 'G-LLMZH86LY6');
 </script>
-<link rel="stylesheet" type="text/css" href="static/css/index.css">
-<a href="https://shop.voteforproduct.com/">
-    <p class="topright">Shop</p>
-</a>
-<br>
-<a href="mailto:support@voteforproduct.com?subject=voteforproduct.com%20support">
-    <p class="topleft">Contact support</p>
-</a>
 
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/nav.css') }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
     </head>
 
     <body>
+      <nav class="navbar">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a href="/">Shop</a></li>
+            <li class="nav-item"><a href="/leaderboard">Leaderboard</a></li>
+            <li class="nav-item"><a href="/contact">Contact Us</a></li>
+            <li class="nav-item"><a href="/login">Login</a></li>
+            
+    
+        </ul>
+    
+    
+    </nav>
 
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -60,5 +65,9 @@
         Places 1-2 receive 100% of prize. Places 3-5 receive 50% of prize. Places 5-10 receive 20% of prize.
         It may take up to 24 hours to receive your Monero.
     </p>
+
+    <footer class="footer">
+      <p>&copy; 2024 Vote For Product</p>
+  </footer>
 </body>
 </html>
