--- a/templates/register.html
+++ b/templates/register.html
@@ -8,23 +8,29 @@
 
   gtag('config', 'G-LLMZH86LY6');
 </script>
-<link rel="stylesheet" type="text/css" href="static/css/index.css">
-<a href="https://shop.voteforproduct.com/">
-    <p class="topright">Shop</p>
-</a>
-<a href="mailto:support@voteforproduct.com?subject=voteforproduct.com%20support">
-    <p class="topleft">Contact support</p>
-</a>
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/nav.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
 <body>
+  <nav class="navbar">
+    <ul class="navbar-nav">
+        <li class="nav-item"><a href="/">Shop</a></li>
+        <li class="nav-item"><a href="/leaderboard">Leaderboard</a></li>
+        <li class="nav-item"><a href="/contact">Contact Us</a></li>
+        <li class="nav-item"><a href="/login">Login</a></li>
+        
+
+    </ul>
+
+
+</nav>
     <h2>Register</h2>
     {% with messages = get_flashed_messages() %}
       {% if messages %}
@@ -349,5 +355,9 @@
         It may take up to 24 hours to receive your Monero.
     </p>
     </form>
+
+    <footer class="footer">
+      <p>&copy; 2024 Vote For Product</p>
+  </footer>
 </body>
 </html>
