--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/nav.css') }}">
 <nav class="navbar">
     <ul class="navbar-nav">
-        <li class="nav-item"><a href="/">Shop</a></li>
+        <li class="nav-item"><a href="https://shop.voteforproduct.com/">Shop</a></li>
         <li class="nav-item"><a href="/leaderboard">Leaderboard</a></li>
         <li class="nav-item"><a href="/contact">Contact Us</a></li>
         <li class="nav-item"><a href="/login">Login</a></li>
