--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <ul class="navbar-nav">
-        <li class="nav-item"><a href="/">Shop</a></li>
+        <li class="nav-item"><a href="https://shop.voteforproduct.com/">Shop</a></li>
         <li class="nav-item"><a href="/leaderboard">Leaderboard</a></li>
         <li class="nav-item"><a href="/contact">Contact Us</a></li>
 
