--- a/templates/register.html
+++ b/templates/register.html
@@ -21,7 +21,7 @@
 <body>
   <nav class="navbar">
     <ul class="navbar-nav">
-        <li class="nav-item"><a href="/">Shop</a></li>
+        <li class="nav-item"><a href="https://shop.voteforproduct.com/">Shop</a></li>
         <li class="nav-item"><a href="/leaderboard">Leaderboard</a></li>
         <li class="nav-item"><a href="/contact">Contact Us</a></li>
         <li class="nav-item"><a href="/login">Login</a></li>
