--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LLMZH86LY6"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -11,22 +12,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/nav.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
-<div class="textContainer1">
-  <nav class="navbar">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a href="/">Home</a></li>
-            <li class="nav-item"><a href="/vote">Vote</a></li>
-            <li class="nav-item"><a href="https://shop.voteforproduct.com/">Shop</a></li>
-            <li class="nav-item"><a href="/leaderboard">Leaderboard</a></li>
-            <li class="nav-item"><a href="/contact">Contact Us</a></li>
-            <li class="nav-item"><a href="/login">Login</a></li>
-            <li class="nav-item"><a href="/register">Register</a></li>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+</head>
 
 
-        </ul>
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <a class="navbar-brand" href="/">Vote For Product</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+            <li class="nav-item"><a class='nav-link' href="/">Home</a></li>
+            <li class="nav-item"><a class='nav-link' href="/vote">Vote</a></li>
+            <li class="nav-item"><a class='nav-link' href="https://shop.voteforproduct.com/">Shop</a></li>
+            <li class="nav-item"><a class='nav-link' href="/leaderboard">Leaderboard</a></li>
+            <li class="nav-item"><a class='nav-link' href="/contact">Contact Us</a></li>
+            <li class="nav-item"><a class='nav-link' href="/login">Login</a></li>
+            <li class="nav-item"><a class='nav-link' href="/register">Register</a></li>
+      </ul>
+    </div>
+  </nav>
+  <br>
 
-
-    </nav>
     <h1>Better value for money? Click to Choose.</h1>
     <h2>Try and guess the item that most people have picked!</h2>
     <p>Product List is reset daily at 8pm GMT</p>
@@ -42,3 +55,4 @@
 </footer>
 
 </div>
+</html>
