--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,26 @@
 
     <h1>Better value for money? Click to Choose.</h1>
     <h2>Try and guess the item that most people have picked!</h2>
+    <p>
+      Instructions:
+    </p>
+    <p>
+      Step 1:
+    </p>
+    <a href = "/register">
+    <p>
+      Create an account by registering here.
+    </p>
+    </a>
+    <p>
+      Step 2:
+    </p>
+    <a href = '/vote'>
+    <p>
+      Vote on products here
+    </p>
+    </a>
+
     <p>Product List is reset daily at 8pm GMT</p>
     <p>
         Current prize is £1.00. Every day at 8pm GMT
@@ -49,6 +69,14 @@
         (You must enter a valid Monero wallet address to be paid, or if I know you in person I can pay cash.)
         Places 1-2 receive 100% of prize. Places 3-5 receive 50% of prize. Places 5-10 receive 20% of prize.
         It may take up to 24 hours to receive your Monero.
+    </p>
+    <h3>
+      About us:
+    </h3>
+    <p>
+      Our team consists of Robbie, a Computer Science undergraduate from England, and Talha,
+      a Maths PhD student from Pakistan. Together, we have invested over 50 hours on this project,
+      as well as too much money in hosting.
     </p>
   <footer class="footer">
     <p>&copy; 2024 Vote for Product</p>
