--- a/templates/2.html
+++ b/templates/2.html
@@ -19,6 +19,6 @@
             <div class="flash {{category}}">{{message}}</div>
         {% endfor %}
         {% endwith%}
-        <a href="/">Choose more items!</a>
+        <a href="vote">Choose more items!</a>
     </div>
 </head>
