--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -39,7 +39,7 @@
                 <th>Wins/Losses</th>
                 <th>Wins</th>
                 <th>Losses</th>
-                <th>Draws</th>
+<!--                <th>Draws</th>-->
                 <th>Username</th>
             </tr>
         </thead>
@@ -49,7 +49,7 @@
                 <td>{{ username[1] }}</td>
                 <td>{{ username[2] }}</td>
                 <td>{{ username[3] }}</td>
-                <td>{{ username[4] }}</td>
+<!--                <td>{{ username[4] }}</td>-->
                 <td>{{ username[0] }}</td>
             </tr>
             {% endfor %}
