--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -37,8 +37,8 @@
         <thead>
             <tr>
                 <th>Wins/Losses</th>
-                <th>Wins</th>
-                <th>Losses</th>
+<!--                <th>Wins</th>-->
+<!--                <th>Losses</th>-->
 <!--                <th>Draws</th>-->
                 <th>Username</th>
             </tr>
@@ -47,8 +47,8 @@
             {% for username in usernames %}
             <tr>
                 <td>{{ username[1] }}</td>
-                <td>{{ username[2] }}</td>
-                <td>{{ username[3] }}</td>
+<!--                <td>{{ username[2] }}</td>-->
+<!--                <td>{{ username[3] }}</td>-->
 <!--                <td>{{ username[4] }}</td>-->
                 <td>{{ username[0] }}</td>
             </tr>
