--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
       <ul class="navbar-nav">
             <li class="nav-item"><a class='nav-link' href="/">Home</a></li>
             <li class="nav-item"><a class='nav-link' href="/vote">Vote</a></li>
+            <li class="nav-item"><a class='nav-link' href="/cashout">Cash out</a></li>
             <li class="nav-item"><a class='nav-link' href="https://shop.voteforproduct.com/">Shop</a></li>
             <li class="nav-item"><a class='nav-link' href="/leaderboard">Leaderboard</a></li>
             <li class="nav-item"><a class='nav-link' href="/contact">Contact Us</a></li>
@@ -58,17 +59,23 @@
     </p>
     <a href = '/vote'>
     <p>
-      Vote on products here
+      Vote on products here.
+    </p>
+    </a>
+    <p>
+      Step 3:
+    </p>
+    <a href = '/cashout'>
+    <p>
+      Cash out your money here.
     </p>
     </a>
 
     <p>Product List is reset daily at 8pm GMT</p>
     <p>
-        Current prize is £1.00. Every day at 8pm GMT
-        the Top 10 users on the leaderboard will receive an email and be paid in Monero (XMR).
-        (You must enter a valid Monero wallet address to be paid, or if I know you in person I can pay cash.)
-        Places 1-2 receive 100% of prize. Places 3-5 receive 50% of prize. Places 5-10 receive 20% of prize.
-        It may take up to 24 hours to receive your Monero.
+        You win £0.02 for every time you choose the product with better value for money.
+        You win £0.01 for every time you choose a product where the value for money is equal to the other product.
+        You lose £0.01 for every time you choose the product with worst value for money.
     </p>
     <h3>
       About us:
