--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,6 +17,7 @@
       <ul class="navbar-nav">
             <li class="nav-item"><a class='nav-link' href="/">Home</a></li>
             <li class="nav-item"><a class='nav-link' href="/vote">Vote</a></li>
+          <li class="nav-item"><a class='nav-link' href="/cashout">Cash out</a></li>
             <li class="nav-item"><a class='nav-link' href="https://shop.voteforproduct.com/">Shop</a></li>
             <li class="nav-item"><a class='nav-link' href="/leaderboard">Leaderboard</a></li>
             <li class="nav-item"><a class='nav-link' href="/contact">Contact Us</a></li>
