--- a/templates/vote.html
+++ b/templates/vote.html
@@ -32,6 +32,7 @@
       <ul class="navbar-nav">
             <li class="nav-item"><a class='nav-link' href="/">Home</a></li>
             <li class="nav-item"><a class='nav-link' href="/vote">Vote</a></li>
+            <li class="nav-item"><a class='nav-link' href="/cashout">Cash out</a></li>
             <li class="nav-item"><a class='nav-link' href="https://shop.voteforproduct.com/">Shop</a></li>
             <li class="nav-item"><a class='nav-link' href="/leaderboard">Leaderboard</a></li>
             <li class="nav-item"><a class='nav-link' href="/contact">Contact Us</a></li>
@@ -60,6 +61,10 @@
             <a href="/2">{{ contestant2 }}</a>
         </div>
     </div>
+</div>
+<div>
+    <p>My balance:</p>
+    <p>£{{ balance }}</p>
 </div>
 <footer class="footer">
     <p>&copy; 2024 Vote for Product</p>
