--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
     </h3>
     <p>
       Our team consists of Robbie, a Computer Science undergraduate from England, and Talha,
-      a Maths PhD student from Pakistan. Together, we have invested over 50 hours on this project,
+      a Maths PhD scholar from Pakistan. Together, we have invested over 50 hours on this project,
       as well as too much money in hosting.
     </p>
   <footer class="footer">
