--- a/templates/cashout.html
+++ b/templates/cashout.html
@@ -38,7 +38,7 @@
         copy the receiving address and paste it into the form below.
     </p>
 
-    <form method="post" action="{{ url_for('contact') }}">
+    <form method="post" action="{{ url_for('cashout') }}">
         <label for="username">Your Username:</label><br>
         <input type="text" id="username" name="username" required><br>
         <label for="email">Your Email:</label><br>
