--- a/templates/contact.html
+++ b/templates/contact.html
@@ -35,8 +35,8 @@
     <p>Alternatively, you can use the form below to send us a message:</p>
     
     <form method="post" action="{{ url_for('contact') }}">
-        <label for="name">Your Name:</label><br>
-        <input type="text" id="name" name="name" required><br>
+        <label for="name1">Your Name:</label><br>
+        <input type="text" id="name1" name="name1" required><br>
         <label for="email">Your Email:</label><br>
         <input type="email" id="email" name="email" required><br>
         <label for="message">Message:</label><br>
