--- a/templates/cashout.html
+++ b/templates/cashout.html
@@ -37,6 +37,11 @@
         <a href="https://www.getmonero.org/downloads/">the official Monero website.</a> Create a new wallet on the app,
         copy the receiving address and paste it into the form below.
     </p>
+    <p>
+        To convert your Monero to cash, we recommend you use a website such as
+        <a href="https://www.kraken.com/">Kraken</a> where you can get verified
+        and sell your Monero for any currency.
+    </p>
 
     <form method="post" action="{{ url_for('cashout') }}">
         <label for="username">Your Username:</label><br>
