--- a/templates/cashout.html
+++ b/templates/cashout.html
@@ -42,6 +42,9 @@
         <a href="https://www.kraken.com/">Kraken</a> where you can get verified
         and sell your Monero for any currency.
     </p>
+    <p>
+        Maximum withdrawal limit per day is £3.00
+    </p>
 
     <form method="post" action="{{ url_for('cashout') }}">
         <label for="username">Your Username:</label><br>
