--- a/templates/cashout.html
+++ b/templates/cashout.html
@@ -32,6 +32,9 @@
 <div class="contact-container">
     <h1>Cash out your money</h1>
     <p>
+        Your balance: £{{ balance }}
+    </p>
+    <p>
         Fill out the form below to get paid in Monero. It can take up to 24 hours to receive your Monero.
         To get started with Monero, download the Monero GUI Wallet app from
         <a href="https://www.getmonero.org/downloads/">the official Monero website.</a> Create a new wallet on the app,
