--- a/templates/index.html
+++ b/templates/index.html
@@ -41,50 +41,49 @@
   </nav>
   <br>
 
-    <h1>Better value for money? Click to Choose.</h1>
-    <h2>Try and guess the item that most people have picked!</h2>
-    <p>
-      Instructions:
-    </p>
-    <p>
-      Step 1:
-    </p>
-    <a href = "/register">
-    <p>
-      Create an account by registering here.
-    </p>
-    </a>
-    <p>
-      Step 2:
-    </p>
-    <a href = '/vote'>
-    <p>
-      Vote on products here.
-    </p>
-    </a>
-    <p>
-      Step 3:
-    </p>
-    <a href = '/cashout'>
-    <p>
-      Cash out your money here.
-    </p>
-    </a>
+    <h1 class="h1">Better value for money? Click to Choose.</h1>
+    <h2 class="h2">Try and guess the item that most people have picked!</h2>
+    <div class="centeredbody">
+        <p>
+          Instructions:
+        </p>
+        <p>
+          Step 1:
+        <a href = "/register">
+          Create an account by registering here.
+        </a>
+        </p>
+        <p>
+          Step 2:
+        <a href = '/vote'>
+          Vote on products here.
+        </a>
+        </p>
+        <p>
+          Step 3:
+        <a href = '/cashout'>
+          Cash out your money here.
+        </a>
+        </p>
 
-    <p>Product List is reset daily at 8pm GMT</p>
-    <p>
-        You win £0.02 for every time you choose the product with better value for money.
-        You win £0.01 for every time you choose a product where the value for money is equal to the other product.
-        You lose £0.01 for every time you choose the product with worst value for money.
-    </p>
-    <h3>
-      About us:
-    </h3>
-    <p>
-      Our team consists of Robbie, a Computer Science undergraduate from England, and Talha,
-      a Maths PhD scholar from Pakistan. Together, we have invested over 50 hours on this project,
-      as well as too much money in hosting.
-    </p>
+        <p>Product List is reset daily at 8pm GMT.</p>
+        <p>
+            You win £0.02 for every time you choose the product with better value for money.
+            You win £0.01 for every time you choose a product where the value for money is equal to the other product.
+            You lose £0.01 for every time you choose the product with worst value for money.
+        </p>
+    </div>
+    <br>
+    <div class="centeredbody">
+        <h3>
+          About us:
+        </h3>
+        <p>
+          Our team consists of Robbie, a Computer Science undergraduate from England, and Talha,
+          a Maths PhD scholar from Pakistan. Together, we have invested over 50 hours on this project,
+          as well as too much money in hosting.
+        </p>
+    </div>
   <footer class="footer">
     <p>&copy; 2024 Vote for Product</p>
 </footer>
