--- a/templates/vote.html
+++ b/templates/vote.html
@@ -62,9 +62,8 @@
         </div>
     </div>
 </div>
-<div>
-    <p>My balance:</p>
-    <p>£{{ balance }}</p>
+<div class="textContainer1">
+    <p>My balance: £{{ balance }}</p>
 </div>
 <footer class="footer">
     <p>&copy; 2024 Vote for Product</p>
