--- a/static/css/2.css
+++ b/static/css/2.css
@@ -13,7 +13,7 @@ position: absolute;
 .textContainer1{
     font-size: 50px;
     margin: 0;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
