--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,15 @@
+.h1 {
+    text-align: center;
+}
+.h2 {
+    text-align: center;
+}
+.centeredbody{
+    border: 5px solid;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
 .topright{
     position: absolute;
     top: 0px;
@@ -77,7 +89,13 @@ position: absolute;
 
 @media screen and (max-width: 768px){
     .card-container {
-        flex-wrap: wra;
+        flex-wrap: wrap;
     }
+    .centeredbody{
+    border: 5px solid;
+    margin: auto;
+    width: 80%;
+    padding: 10px;
+}
     
 }
