--- a/static/css/index.css
+++ b/static/css/index.css
@@ -90,12 +90,14 @@ position: absolute;
 @media screen and (max-width: 768px){
     .card-container {
         flex-wrap: wrap;
+        flex-direction: column;
+
     }
     .centeredbody{
-    border: 5px solid;
-    margin: auto;
-    width: 80%;
-    padding: 10px;
-}
+        border: 5px solid;
+        margin: auto;
+        width: 80%;
+        padding: 10px;
+    }
     
 }
