--- a/templates/2.html
+++ b/templates/2.html
@@ -1,3 +1,4 @@
+<link rel="shortcut icon" href="{{ url_for('static', filename='/favicon/favicon.ico') }}">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LLMZH86LY6">
 </script>
