--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-
+<link rel="shortcut icon" href="{{ url_for('static', filename='/favicon/favicon.ico') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/contact.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/nav.css') }}">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
