--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="shortcut icon" href="{{ url_for('static', filename='/favicon/favicon.ico') }}">
 <html lang="en">
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LLMZH86LY6"></script>
