--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<link rel="shortcut icon" href="{{ url_for('static', filename='/favicon/favicon.ico') }}">
+
 <head>
     <title>Leaderboard</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/nav.css') }}">
