--- a/templates/index.html
+++ b/templates/index.html
@@ -68,9 +68,9 @@
 
         <p>Product List is reset daily at 8pm GMT.</p>
         <p>
-            You win £0.02 for every time you choose the product with better value for money.
-            You win £0.01 for every time you choose a product where the value for money is equal to the other product.
-            You lose £0.01 for every time you choose the product with worst value for money.
+            You win {{ currency }} {{ win_rate }} for every time you choose the product with better value for money.
+            You win {{ currency }} {{ draw_rate }} for every time you choose a product where the value for money is equal to the other product.
+            You lose {{ currency }} {{ loss_rate }} for every time you choose the product with worst value for money.
         </p>
     </div>
     <br>
