--- a/templates/register.html
+++ b/templates/register.html
@@ -318,6 +318,7 @@
             <option value="CZK">CZK</option>
             <option value="DKK">DKK</option>
             <option value="EUR">EUR</option>
+            <option value="GBP">GBP</option>
             <option value="HKD">HKD</option>
             <option value="HUF">HUF</option>
             <option value="IDR">IDR</option>
@@ -330,6 +331,7 @@
             <option value="NOK">NOK</option>
             <option value="NZD">NZD</option>
             <option value="PHP">PHP</option>
+            <option value="PKR">PKR</option>
             <option value="PLN">PLN</option>
             <option value="RON">RON</option>
             <option value="SEK">SEK</option>
