--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
         <p>
           Step 2:
         <a href = '/vote'>
-          Vote on products here.
+          Vote on products to earn money here.
         </a>
         </p>
         <p>
@@ -65,13 +65,12 @@
           Cash out your money here.
         </a>
         </p>
-
-        <p>Product List is reset daily at 8pm GMT.</p>
         <p>
             You win {{ currency }} {{ win_rate }} for every time you choose the product with better value for money.
             You win {{ currency }} {{ draw_rate }} for every time you choose a product where the value for money is equal to the other product.
-            You lose {{ currency }} {{ loss_rate }} for every time you choose the product with worst value for money.
+            You lose {{ currency }} {{ loss_rate }} for every time you choose the product with worse value for money.
         </p>
+        <p>Product List is reset daily at 8pm GMT.</p>
     </div>
     <br>
     <div class="centeredbody">
