--- a/templates/index.html
+++ b/templates/index.html
@@ -49,19 +49,19 @@
         </p>
         <p>
           Step 1:
-        <a href = "/register">
+        <a href = "/register " target="_blank">
           Create an account by registering here.
         </a>
         </p>
         <p>
           Step 2:
-        <a href = '/vote'>
+        <a href = '/vote' target="_blank">
           Vote on products to earn money here.
         </a>
         </p>
         <p>
           Step 3:
-        <a href = '/cashout'>
+        <a href = '/cashout' target="_blank">
           Cash out your money here.
         </a>
         </p>
